--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="http://code.jquery.com/jquery-git2.min.js"></script>
 	<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="parser.js"></script>
 
 	<!-- Styling Links -->
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -30,6 +31,10 @@
 
 	<!-- Visualization JS (in body as it edits DOM elements) -->
 	<script src="bundle.js"></script>
+	<script type="text/javascript">
+		parse_courses();
+	</script>
+
 </body>
 
 </html>
