--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<h1>flow kap</h1>
 		</br>
 		<input id="deptsearch">
-		<p> IE 8 or earlier are not supported </p>
+		<p> Alison Tai and Hyung-seo Park </p>
 	</div>
 
 	<!-- Visualization -->
