--- a/index.html
+++ b/index.html
@@ -12,21 +12,32 @@
 	<script type="text/javascript" src="parser.js"></script>
 
 	<!-- Styling Links -->
-	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" media="all" href="stylesheet.css"/>
 </head>
 
 <body>
 	<!-- Header and Filters -->
 	<div class="filters">
-		<h1>flow kap</h1>
-		</br>
+		<h1><span style="color:#78C0A8">flow</span><span style="color:#F26223">kap</span></h1>
+		<h3>Departments</h3>
+		<ul>
+			<li> Append the department filters hurr </li>
+		</ul>
+		<h3>Add Departments</h3>
 		<input id="deptsearch">
-		<p> Alison Tai and Hyung-seo Park </p>
+		<h3>Additional Filters +</h3>
 	</div>
 
 	<!-- Visualization -->
 	<div class="viz">
+	</div>
+
+	<!-- Footer -->
+	<div class="footer">
+		<p>Map <span style="color:#78C0A8">flow.</span></br>
+		<span style="color:#F26223">Cap</span> commute time.</p>
 	</div>
 
 	<!-- Visualization JS (in body as it edits DOM elements) -->
