Tooltip now shows code of the building and number of enrolled students in that building

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 		var courses = parse_courses();
 		console.log("courses:", courses);
 		var buildings = split_buildings(courses);
-		var matrix = create_matrix(buildings);
-		console.log(matrix);
+		var compounded_buildings = create_matrix(buildings);
+		console.log(compounded_buildings);
 		begin_viz();
 	</script>
 	
