added a hidden div that appears when clicking on an arc. Will be used for building specific visualizations

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 	<div class="viz">
 	</div>
 
+	<div class="Overlay" id="overlay_div">
+	</div>
+
 	<!-- Footer -->
 	<div class="footer">
 		<p>Map <span style="color:#78C0A8">flow.</span></br>
@@ -57,8 +60,7 @@
 
 		// split buildings will take in an array of course objects and a string.
 		// The string is a filter for which department courses should be visualized.
-		split_buildings(courses, "");
-		
+		split_buildings(courses, "");		
 	</script>
 	
 </body>
