--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="CourseLocationCSV.js"></script>
 	<script type="text/javascript" src="parser.js"></script>
 	<script type="text/javascript" src="bundle.js"></script>	
+	<script type="text/javascript" src="heatmap.js"></script>	
 
 	<!-- Styling Links -->
 	<!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
