added global list of departments to show in the list

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<div class="filters">
 			<h1><span style="color:#78C0A8">flow</span><span style="color:#F26223">kap</span></h1>
 			<h3>Departments</h3>
-			<ul>
-				<li> Append the department filters hurr </li>
+			<ul id = "department_list">
+				<!--<li> Append the department filters hurr </li> -->
 			</ul>
 			<h3>Add Departments</h3>
 			<div class="ui-widget">
