Added text showing building name for heatmap

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 	</div>
 
 	<div class="Overlay" id="overlay_div">
+		<h2 id = "building_name"></h2>
+
 	</div>
 
 	<!-- Visualization JS (in body as it edits DOM elements) -->
