--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="parser.js"></script>
 	<script type="text/javascript" src="bundle.js"></script>	
 	<script type="text/javascript" src="heatmap.js"></script>	
+	<script type="text/javascript" src="piechart.js"></script>
 
 	<!-- Styling Links -->
 	<!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
@@ -54,10 +55,8 @@
 
 	<div class="Overlay" id="overlay_div">
 		<h2 id = "building_name"></h2>
-
 	</div>
 
-	<!-- Visualization JS (in body as it edits DOM elements) -->
 	<script type="text/javascript">
 		// parse_courses return an array of objects from the Courses csv file.
 		var courses = parse_courses();
@@ -66,6 +65,7 @@
 		// split buildings will take in an array of course objects and a string.
 		// The string is a filter for which department courses should be visualized.
 		split_buildings(courses, "");		
+
 	</script>
 	
 </body>
