--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 		<!-- Header and Filters -->
 		<div class="filters">
 			<h1><span style="color:#78C0A8">flow</span><span style="color:#F26223">kap</span></h1>
-			<h3>Departments</h3>
+			<h3>Subjects</h3>
 			<ul id = "department_list">
 				<!--<li> Append the department filters hurr </li> -->
 			</ul>
-			<h3>Add Departments</h3>
+			<h3>Add Subjects</h3>
 			<div class="ui-widget">
 				<!-- <label for="deptsearch">Add Departments: </label> -->
 				<input id="deptsearch">
 				<!-- This button updates the visualization by filtering the given department -->
 				<button id="deptButton"> Update </button> <br>
-				<button id="showAll"> Show All Departments </button> <br>
+				<button id="showAll"> Show All Subjects</button> <br>
 				<!--<button id="deleteLastDept"> Delete Last Department </button>-->
 			</div>
 			<!--<h3>Additional Filters +</h3>-->
