ARCS BETWEEN BUILDINGS WORK!!!!

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<script type="text/javascript">
 		// parse_courses return an array of objects from the Courses csv file.
 		var courses = parse_courses();
-		console.log("courses:", courses);
+		//console.log("courses:", courses);
 
 		// split buildings will take in an array of course objects and a string.
 		// The string is a filter for which department courses should be visualized.
