--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</div>
 
 		<!-- Visualization -->
-		<div class="viz">
+		<div class="viz" style="position: fixed; left:350px; top: 25px">
 		</div>
 
 		<!-- Footer -->
