turned off scroll

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" type="text/css" media="all" href="stylesheet.css"/>
 </head>
 
-<body>
+<body SCROLL=NO>
 	<div id = "background">
 		<!-- Header and Filters -->
 		<div class="filters">
