added some instructions

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
 		<!-- Header and Filters -->
 		<div class="filters">
 			<h1><span style="color:#78C0A8">flow</span><span style="color:#F26223">kap</span></h1>
+			<h4> By Hyung-seo Park and Alison Tai </h4>
+			<p>
+				<b> Instructions: </b> <br>
+				Each segmented arc represents an academic <br>
+				building at Tufts.
+				Hover to see some details, click to see <br>
+				even more details. <br>
+				<br>
+				Each connecting inner arc represents the <br>
+				estimated flow of students from one building <br>
+				to another.<br>
+				<br>
+				Use the textbox below to filter the <br>
+				visualization by departments.
+			</p>
 			<h3>Subjects</h3>
 			<ul id = "department_list">
 				<!--<li> Append the department filters hurr </li> -->
@@ -40,12 +55,14 @@
 				<button id="deptButton"> Update </button> <br>
 				<button id="showAll"> Show All Subjects</button> <br>
 				<!--<button id="deleteLastDept"> Delete Last Department </button>-->
+				
+
 			</div>
 			<!--<h3>Additional Filters +</h3>-->
 		</div>
 
 		<!-- Visualization -->
-		<div class="viz" style="position: fixed; left:350px; top: 25px">
+		<div class="viz" style="position: fixed; left:420px; top: 25px">
 		</div>
 
 		<!-- Footer -->
