cleaned up interface

--- a/index.html
+++ b/index.html
@@ -31,29 +31,24 @@
 			<h4> By Hyung-seo Park and Alison Tai </h4>
 			<p>
 				<b> Instructions: </b> <br>
-				Each segmented arc represents an academic <br>
-				building at Tufts.
-				Hover to see some details, click to see <br>
-				even more details. <br>
-				<br>
-				Each connecting inner arc represents the <br>
-				estimated flow of students from one building <br>
-				to another.<br>
-				<br>
-				Use the textbox below to filter the <br>
-				visualization by departments.
+				Each segmented arc represents an academic </br>
+				building at Tufts. Each connecting inner arc </br>represents the estimated flow of students from </br>
+				one building to another.</br>
+				</br>
+				Use the textbox below to filter the visualization</br>
+				by departments.
 			</p>
-			<h3>Subjects</h3>
+			<h3>Departments</h3>
 			<ul id = "department_list">
 				<!--<li> Append the department filters hurr </li> -->
 			</ul>
-			<h3>Add Subjects</h3>
+			<h3>Add Departments</h3>
 			<div class="ui-widget">
 				<!-- <label for="deptsearch">Add Departments: </label> -->
 				<input id="deptsearch">
 				<!-- This button updates the visualization by filtering the given department -->
 				<button id="deptButton"> Update </button> <br>
-				<button id="showAll"> Show All Subjects</button> <br>
+				<button id="showAll"> Show All Departments</button> <br>
 				<!--<button id="deleteLastDept"> Delete Last Department </button>-->
 				
 
