cleaning up code

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="http://code.jquery.com/jquery-git2.min.js"></script>
 	<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="ui.js"></script>
-	<script type="text/javascript" src="CourseLocationCSV.js"></script>
-	<script type="text/javascript" src="parser.js"></script>
-	<script type="text/javascript" src="bundle.js"></script>	
-	<script type="text/javascript" src="heatmap.js"></script>	
-	<script type="text/javascript" src="piechart.js"></script>
+	<script type="text/javascript" src="scripts/ui.js"></script>
+	<script type="text/javascript" src="scripts/CourseLocationCSV.js"></script>
+	<script type="text/javascript" src="scripts/parser.js"></script>
+	<script type="text/javascript" src="scripts/bundle.js"></script>	
+	<script type="text/javascript" src="scripts/heatmap.js"></script>	
+	<script type="text/javascript" src="scripts/piechart.js"></script>
 
 	<!-- Styling Links -->
 	<!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
