--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" media="all" href="public/stylesheets/style.css"/>
+	<link rel="stylesheet" type="text/css" media="all" href="stylesheets/style.css"/>
 </head>
 
 <body SCROLL=NO>
