added functionality to see heatmap of all buildings

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 				<!-- This button updates the visualization by filtering the given department -->
 				<button id="deptButton"> Update </button> <br>
 				<button id="showAll"> Show All Departments</button> <br>
+				<button id="AllBuildings"> Heatmap of all building </button> <br>
 				<!--<button id="deleteLastDept"> Delete Last Department </button>-->
 				
 
