--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 				<!--<button id="deleteLastDept"> Delete Last Department </button>-->
 			</div>
 			<!-- This button updates the visualization by filtering the given department -->
-				<button id="deptButton" class="button-example button-example-1 button-example-blue">Update</button> <br>
+				<button id="deptButton" class="button-example button-example-1 button-example-blue">Update</button>
 				<button id="showAll" class="button-example button-example-1 button-example-green">Show All Departments</button> <br>
 			<h3><b>Additional Filters</b></h3>
-				<button id="AllBuildings" class="button-example button-example-1 button-example-blue">All Buildings</button> <br>
+				<button id="AllBuildings" class="button-example button-example-1 button-example-pink">All Buildings</button> <br>
 		</div>
 
 		<!-- Visualization -->
