--- a/index.html
+++ b/index.html
@@ -29,26 +29,27 @@
 		<div class="filters">
 			<h1><span style="color:#78C0A8">flow</span><span style="color:#F26223">kap</span></h1>
 			<h4> By Hyung-seo Park and Alison Tai </h4>
-			<h3><b>Instructions</b></h3>
+			<!-- <h3><b>Instructions</b></h3> -->
 			<p>
 				Each segmented arc represents an academic </br>
 				building at Tufts. Each connecting inner arc </br>represents the estimated flow of students from </br>
-				one building to another.</br>
-				</br>
-				Use the textbox below to filter the visualization</br>
-				by departments.
+				one building to another. Clicking on a building</br>
+				provides a drill-down view of the building.
 			</p>
 			<h3><b>Departments</b></h3>
 			<ul id = "department_list">
-				<!--<li> Append the department filters hurr </li> -->
+				<!--<li> Append the department filters here </li> -->
 			</ul>
 			<h3><b>Add Departments</b></h3>
+			<p>Use the textbox below to filter the visualization</br>
+				by department(s).</p>
 			<div class="ui-widget">
 				<!-- <label for="deptsearch">Add Departments: </label> -->
 				<input id="deptsearch">
 				
 				<!--<button id="deleteLastDept"> Delete Last Department </button>-->
 			</div>
+			</br>
 			<!-- This button updates the visualization by filtering the given department -->
 				<button id="deptButton" class="button-example button-example-1 button-example-blue">Update</button>
 				<button id="showAll" class="button-example button-example-1 button-example-green">Show All Departments</button> <br>
