--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<button id="deptButton" class="button-example button-example-1 button-example-blue">Update</button>
 				<button id="showAll" class="button-example button-example-1 button-example-green">Show All Departments</button> <br>
 			<h3><b>Additional Filters</b></h3>
-				<button id="AllBuildings" class="button-example button-example-1 button-example-pink">All Buildings</button> <br>
+				<button id="AllBuildings" class="button-example button-example-1 button-example-pink">All Buildings Breakdown</button> <br>
 		</div>
 
 		<!-- Visualization -->
