updated jquery version

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<!-- Javascript Libraries -->
 	<script src="http://d3js.org/d3.v3.min.js"></script>
-	<script src="http://code.jquery.com/jquery-git2.min.js"></script>
+	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="scripts/ui.js"></script>
 	<script type="text/javascript" src="scripts/CourseLocationCSV.js"></script>
